# grid

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  launch.sh  manage.py  pyproject.toml
grid/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
starter/: celery.py  settings.py  urls.py
terraform/: 03_security_groups.tf  04_loadbalancer.tf  05_iam.tf  06_logs.tf  07_ecs.tf  10_rds.tf  ecs.tf  outputs.tf  ses.tf  sqs.tf  variables.tf
terraform/templates/: celery_beat.json.tpl  celery_worker.json.tpl  django_app.json.tpl
tracking/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
tracking/migrations/: 0001_initial.py  0002_habit_numeric_goal.py  0003_alter_habit_days_of_week.py  0004_remove_habitentry_habit_date_unique_and_more.py  0005_remove_habitentry_habit_date_unique_and_more.py  0006_alter_habitentry_completed.py  0007_alter_habit_numeric_goal.py  0008_alter_habitentry_numerical.py  0009_habit_is_archived.py  0010_remove_habitentry_habit_date_unique_and_more.py  0011_habit_is_public_habit_tracking_ha_user_id_6b82c7_idx.py  0012_rename_tracking_ha_user_id_6b82c7_idx_user_public_habit_idx.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_start_sunday.py
